--- a/src/app/procedimientos/colposcopia/colposcopia.component.html
+++ b/src/app/procedimientos/colposcopia/colposcopia.component.html
@@ -77,22 +77,38 @@
             <h6>Crear Colposcopia</h6>
           </div>
         </div>
+        <form [formGroup]="colposcopiaForm">
         <div class="row mt-1">
           <div class="col-md-2">
             <label>DNI</label>
-            <input type="text" class="form-control form-control-sm">
+            <input
+              type="text"
+              class="form-control form-control-sm"
+              formControlName="dni_colposcopia"
+            >
           </div>
           <div class="col-md-4">
             <label>Nombre</label>
-            <input type="text" class="form-control form-control-sm">
+            <input
+             type="text"
+             class="form-control form-control-sm"
+             formControlName="nombre_colposcopia"
+            >
           </div>
           <div class="col-md-2">
             <label>Fecha</label>
-            <input type="date" class="form-control form-control-sm">
+            <input
+              type="date"
+              class="form-control form-control-sm"
+              formControlName="fecha_colposcopia"
+            >
           </div>
           <div class="col-md-4">
             <label>Medico</label>
-            <select class="form-control form-control-sm">
+            <select
+              class="form-control form-control-sm"
+              formControlName="medico_colposcopia"
+            >
               <option selected>Seleccione una opcion</option>
               <option value="1">One</option>
               <option value="2">Two</option>
@@ -103,7 +119,10 @@
         <div class="row mt-3">
           <div class="col-md-4">
             <label>U.escamo columnar</label>
-            <select class="form-control form-control-sm">
+            <select
+              class="form-control form-control-sm"
+              formControlName="escamo_colposcopia"
+            >
               <option selected>Seleccione una opcion</option>
               <option value="1">One</option>
               <option value="2">Two</option>
@@ -112,7 +131,10 @@
           </div>
           <div class="col-md-4">
             <label>Endo cervix</label>
-            <select class="form-control form-control-sm">
+            <select
+              class="form-control form-control-sm"
+              formControlName="cervix_colposcopia"
+            >
               <option selected>Seleccione una opcion</option>
               <option value="1">One</option>
               <option value="2">Two</option>
@@ -121,7 +143,10 @@
           </div>
           <div class="col-md-4">
             <label>Vagina</label>
-            <select class="form-control form-control-sm">
+            <select
+              class="form-control form-control-sm"
+              formControlName="vagina_colposcopia"
+            >
               <option selected>Seleccione una opcion</option>
               <option value="1">One</option>
               <option value="2">Two</option>
@@ -133,7 +158,10 @@
         <div class="row mt-3">
           <div class="col-md-4">
             <label>Vulva</label>
-            <select class="form-control form-control-sm">
+            <select
+              class="form-control form-control-sm"
+              formControlName="vulva_colposcopia"
+            >
               <option selected>Seleccione una opcion</option>
               <option value="1">One</option>
               <option value="2">Two</option>
@@ -142,7 +170,10 @@
           </div>
           <div class="col-md-4">
             <label>Perineo</label>
-            <select class="form-control form-control-sm">
+            <select
+              class="form-control form-control-sm"
+              formControlName="perineo_colposcopia"
+            >
               <option selected>Seleccione una opcion</option>
               <option value="1">One</option>
               <option value="2">Two</option>
@@ -151,7 +182,10 @@
           </div>
           <div class="col-md-4">
             <label>Region Parianal</label>
-            <select class="form-control form-control-sm">
+            <select
+              class="form-control form-control-sm"
+              formControlName="parianal_colposcopia"
+            >
               <option selected>Seleccione una opcion</option>
               <option value="1">One</option>
               <option value="2">Two</option>
@@ -163,7 +197,10 @@
         <div class="row mt-3">
           <div class="col-md-6">
             <label> Biopsia</label>
-            <select class="form-control form-control-sm">
+            <select
+              class="form-control form-control-sm"
+              formControlName="biopsia_colposcopia"
+            >
               <option selected>Seleccione una opcion</option>
               <option value="1">One</option>
               <option value="2">Two</option>
@@ -172,7 +209,10 @@
           </div>
           <div class="col-md-6">
             <label> Papanicolaou</label>
-            <select class="form-control form-control-sm">
+            <select
+              class="form-control form-control-sm"
+              formControlName="papanicolaou_colposcopia"
+            >
               <option selected>Seleccione una opcion</option>
               <option value="1">One</option>
               <option value="2">Two</option>
@@ -184,15 +224,30 @@
         <div class="row mt-3">
           <div class="col-md-6">
             <label>Conclusiones</label>
-            <textarea class="form-control form-control-sm" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <textarea
+              class="form-control form-control-sm"
+              id="exampleFormControlTextarea1" rows="3"
+              formControlName="conclusiones_colposcopia"
+            >
+            </textarea>
           </div>
           <div class="col-md-6">
             <label>Seleccione las imagenes</label>
-            <input class="form-control form-control-sm form-control form-control-sm-sm" id="formFileSm" type="file">
-            <input class="form-control form-control-sm form-control form-control-sm-sm mt-4" id="formFileSm" type="file">
+            <input
+              class="form-control form-control-sm form-control form-control-sm-sm"
+              id="formFileSm"
+              type="file"
+              formControlName="archivo1_colposcopia"
+            >
+            <input
+              class="form-control form-control-sm form-control form-control-sm-sm mt-4"
+              id="formFileSm"
+              type="file"
+              formControlName="archivo2_colposcopia"
+            >
           </div>
         </div>
-        <br>
+      </form>
       </div>
       </div>
     </div>
