--- a/src/app/inventarios/productos/productos.component.html
+++ b/src/app/inventarios/productos/productos.component.html
@@ -28,7 +28,18 @@
                   </tr>
                 </thead>
                 <tbody>
+                  <tr *ngFor="let productos of producto">
 
+                    <td> {{ productos.codigo }} </td>
+                    <td> {{ productos.nombre }} </td>
+                    <td> {{ productos.categoria }} </td>
+                    <td> {{ productos.historial }} </td>
+                    <td> {{ productos.valor }} </td>
+                    <td> {{ productos.cantidad }} </td>
+                    <td> {{ productos.stock }} </td>
+
+
+                  </tr>
                 </tbody>
               </table>
             </div>
@@ -46,7 +57,6 @@
                     type="text"
                     class="form-control"
                     formControlName="categoria_productos"
-                    [(ngModel)]="categoria_productos"
                   >
                 </div>
                 <div class="col-md-6">
@@ -55,7 +65,6 @@
                     type="text"
                     class="form-control"
                     formControlName="nombre_productos"
-                    [(ngModel)]="nombre_productos"
                   >
                 </div>
               </div>
@@ -66,7 +75,6 @@
                     type="text"
                     class="form-control"
                     formControlName="codigo_productos"
-                    [(ngModel)]="codigo_productos"
                   >
                 </div>
                 <div class="col-md-6">
@@ -75,7 +83,6 @@
                     type="text"
                     class="form-control"
                     formControlName="barras_prouctos"
-                    [(ngModel)]="barras_prouctos"
                   >
                 </div>
               </div>
@@ -86,7 +93,6 @@
                     class="form-select"
                     aria-label="Default select example"
                     formControlName="medida_productos"
-                    [(ngModel)]="medida_productos"
                   >
                     <option selected>Caja</option>
                     <option value="1">One</option>
@@ -100,7 +106,6 @@
                     type="text"
                     class="form-control"
                     formControlName="cantidad_productos"
-                    [(ngModel)]="cantidad_productos"
                   >
                 </div>
               </div>
@@ -111,7 +116,6 @@
                     type="text"
                     class="form-control"
                     formControlName="precio_productos"
-                    [(ngModel)]="precio_productos"
                   >
                 </div>
                 <div class="col-md-6">
@@ -120,7 +124,6 @@
                     class="form-select"
                     aria-label="Default select example"
                     formControlName="moneda_productos"
-                    [(ngModel)]="moneda_productos"
                   >
                     <option selected>Soles (/s)</option>
                     <option value="1">One</option>
@@ -139,7 +142,6 @@
                       id="floatingTextarea2"
                       style="height: 100px"
                       formControlName="descripcion_productos"
-                      [(ngModel)]="descripcion_productos"
                     ></textarea>
                     <label for="floatingTextarea2"></label>
                   </div>
@@ -147,7 +149,7 @@
               </div>
               <div class="row mt-3">
                 <div class="col-md-12">
-                  <button type="button" class="btn btn-primary">Guardar</button>
+                  <button type="button" (click)="verArray()" class="btn btn-primary">Guardar</button>
                 </div>
               </div>
             </form>
