subiendo los cambios de configuracion del proyecto

--- a/src/app/admisiones/admision/admision.component.html
+++ b/src/app/admisiones/admision/admision.component.html
@@ -14,13 +14,24 @@
   <div class="container-fluid py-1">
     <div class="row">
       <div class="card">
-        <div class="container-fluid">
-        <div class="row mt-3">
+        <div class="container-fluid mt-3">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="d-flex flex-row-reverse">
+                <a
+                  class="btn btn-primary text-white btn-xs mx-1"
+                >
+                  <i class="fas fa-database text-white"></i> Crear
+                </a>
+              </div>
+            </div>
+          </div>
+        <div class="row ">
           <div class="col-md-12">
             <table class="table table-striped table-hover">
               <thead>
                 <tr class="bg-default">
-                  <th class="text-xs text-white">OPCIONES</th>
+                  <th class="text-xs text-white"></th>
                   <th class="text-xs text-white">PACIENTES</th>
                   <th class="text-xs text-white">ESTADO</th>
                   <th class="text-xs text-white">DOCTOR</th>
@@ -33,11 +44,12 @@
             </table>
           </div>
         </div>
+        <form action="">
         <div class="row mt-4">
           <div class="col-md-6">
             <h6>Datos del Paciente</h6>
             <div class="row mt-2">
-              <div class="row">
+               <div class="row">
                 <div class="col-md-4">
                     <label for="">DNI</label>
                   <input type="text" class="form-control form-control-sm">
@@ -100,21 +112,21 @@
               <div class="row mt-1">
                 <div class="col-md-4">
                   <label for="">Costo</label>
-                  <input type="text" class="form-control form-control-sm">
+                  <input type="number" class="form-control form-control-sm">
                 </div>
                 <div class="col-md-4">
                   <label for="">Descuento</label>
-                  <input type="text" class="form-control form-control-sm">
+                  <input type="number" class="form-control form-control-sm">
                 </div>
                 <div class="col-md-4">
                   <label for="">Comision</label>
-                  <input type="text" class="form-control form-control-sm">
+                  <input type="number" class="form-control form-control-sm">
                 </div>
               </div>
               <div class="row mt-1">
                 <div class="col-md-4">
                   <label for="">Cantidad recibida</label>
-                  <input type="text" class="form-control form-control-sm">
+                  <input type="number" class="form-control form-control-sm">
                 </div>
                 <div class="col-md-4">
                   <label for="">Cantidad a Devolver</label>
@@ -139,7 +151,7 @@
             </div>
           </div>
           <div class="row mt-3">
-            <div class="col-md-1 offset-md-8">
+            <div class="col-md-2 offset-md-7">
               <h5 class="text-center">TOTAL</h5>
             </div>
             <div class="col-md-3">
@@ -147,6 +159,7 @@
             </div>
           </div>
         </div>
+      </form>
       </div>
     </div>
    </div>
