--- a/src/app/admisiones/triage/triage.component.html
+++ b/src/app/admisiones/triage/triage.component.html
@@ -57,163 +57,176 @@
       <div class="card">
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-8">
-              <table class="table table-striped table-hover mt-3">
-                <thead>
-                  <tr class="bg-default">
-                    <th class="text-xs text-white"></th>
-                    <th class="text-xs text-white">ESTADO</th>
-                    <th class="text-xs text-white">DNI</th>
-                    <th class="text-xs text-white">PACIENTE</th>
-                    <th class="text-xs text-white">DOCTOR</th>
-                    <th class="text-xs text-white">ESPECIALIDAD</th>
-                    <th class="text-xs text-white">COSTO</th>
-                  </tr>
-                </thead>
-                <tbody>
-
-                </tbody>
-              </table>
+            <div class="col-md-7">
+              <div class="table-responsive">
+                <table class="table table-striped table-hover mt-3">
+                  <thead>
+                    <tr class="bg-default">
+                      <th class="text-xs text-white"></th>
+                      <th class="text-xs text-white">ESTADO</th>
+                      <th class="text-xs text-white">DNI</th>
+                      <th class="text-xs text-white">PACIENTE</th>
+                      <th class="text-xs text-white">DOCTOR</th>
+                      <th class="text-xs text-white">ESPECIALIDAD</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>
+                        <div class="form-check">
+                          <input
+                            class="form-check-input form-control-sm"
+                            type="checkbox"
+                            id="flexCheckDefault"
+                          >
+                        </div>
+                      </td>
+                      <td class="text-xs text-dark mb-0 mt-4">PENDIENTE</td>
+                      <td class="text-xs text-dark mb-0">1110542802</td>
+                      <td class="text-xs text-dark mb-0">GALVEZ JERSON</td>
+                      <td class="text-xs text-dark mb-0">CUNIA PEREZ MARLENI</td>
+                      <td class="text-xs text-dark mb-0">ECOGRAFIA TRANSVAGINAL</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-5">
               <form [formGroup]="triageForm">
+
               <div class="row mt-2">
-                <div class="col-md-6">
-                  <label for="">DNI</label>
+                <div class="col-md-5">
+                  <label>DNI</label>
                   <input
                     type="text"
                     class="form-control form-control-sm"
                     formControlName="dni_triage"
-                    [(ngModel)]="dni_triage"
                   >
                 </div>
-                <div class="col-md-6">
-                  <label for="">Paciente</label>
+                <div class="col-md-7">
+                  <label>Paciente</label>
                   <input
                     type="text"
                     class="form-control form-control-sm"
                     formControlName="paciente_triage"
-                    [(ngModel)]="paciente_triage"
                   >
-                </div>
-                <div class="col-md-6">
-                  <label for="">Edad</label>
-                  <input
-                    type="text"
-                    class="form-control form-control-sm"
-                    formControlName="edad_triage"
-                    [(ngModel)]="edad_triage"
-                  >
-                </div>
-                <div class="col-md-6">
-                  <label for="">Doctor</label>
-                  <select
-                    class="form-control form-control-sm"
-                    formControlName="doctor_triage"
-                    [(ngModel)]="doctor_triage"
-                  >
-                    <option value="">Seleccione una opcion</option>
-                  </select>
-                </div>
-                <div class="col-md-6">
-                  <label for="">Especialidad</label>
-                  <select
-                  class="form-control form-control-sm"
-                  formControlName="especialidad_triage"
-                  [(ngModel)]="especialidad_triage"
-                  >
-                    <option value="">Seleccione una opcion</option>
-                  </select>
-                </div>
-                <div class="col-md-6">
-                  <label for="">Presion arterial(mmHg)</label>
-                  <input
-                    type="text"
-                    class="form-control form-control-sm"
-                    formControlName="presion_triage"
-                    [(ngModel)]="presion_triage"
-                  >
-                </div>
-                <div class="col-md-6">
-                  <label for="">Temperatura (C)</label>
-                  <input
-                    type="text"
-                    class="form-control form-control-sm"
-                    formControlName="temperatura_triage"
-                    [(ngModel)]="temperatura_triage"
-                  >
-                </div>
-                <div class="col-md-6">
-                  <label for="">Frecuencia Respiratoria</label>
-                  <input
-                    type="text"
-                    class="form-control form-control-sm"
-                    formControlName="frecuenciar_triage"
-                    [(ngModel)]="frecuenciar_triage"
-                  >
-                </div>
-                <div class="col-md-6">
-                  <label for="">Frecuencia cardiaca</label>
-                  <input
-                    type="text"
-                    class="form-control form-control-sm"
-                    formControlName="frecuenciac_triage"
-                    [(ngModel)]="frecuenciac_triage"
-                  >
-                </div>
-                <div class="col-md-6">
-                  <label for="">Saturaciòn O2</label>
-                  <input
-                    type="text"
-                    class="form-control form-control-sm"
-                    formControlName="saturacion_triage"
-                    [(ngModel)]="saturacion_triage"
-                  >
-                </div>
-                <div class="col-md-6">
-                  <label for="">Peso (kg)</label>
-                  <input
-                    type="text"
-                    class="form-control form-control-sm"
-                    formControlName="peso_triage"
-                    [(ngModel)]="peso_triage"
-                  >
-                </div>
-                <div class="col-md-6">
-                  <label for="">Talla (cm)</label>
-                  <input
-                    type="text"
-                    class="form-control form-control-sm"
-                    formControlName="talla_triage"
-                    [(ngModel)]="talla_triage"
-                  >
-                </div>
-                <div class="col-md-12">
-                  <label for="">Imc</label>
-                  <input
-                    type="text"
-                    class="form-control form-control-sm"
-                    formControlName="imc_triage"
-                    [(ngModel)]="imc_triage"
-                  >
-                  <button
-                    class="btn btn-success mt-3"
-                    type="button"
-                  >
-                    Guardar
-                  </button>
-                  <button
-                    class="btn btn-danger mt-3 mx-2"
-                    type="button"
-                  >
-                    Pasar
-                  </button>
                 </div>
               </div>
-            </form>
+                <div class="row mt-1">
+                  <div class="col-md-3">
+                    <label>Edad</label>
+                    <input
+                      type="number"
+                      class="form-control form-control-sm"
+                      formControlName="edad_triage"
+                    >
+                  </div>
+                  <div class="col-md-9">
+                    <label>Doctor</label>
+                    <select
+                      class="form-control form-control-sm"
+                      formControlName="doctor_triage"
+                    >
+                      <option value="">Seleccione una opcion</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="row mt-1">
+                  <div class="col-md-7">
+                    <label>Especialidad</label>
+                    <select
+                    class="form-control form-control-sm"
+                    formControlName="especialidad_triage"
+                    >
+                      <option value="">Seleccione una opcion</option>
+                    </select>
+                  </div>
+                  <div class="col-md-5">
+                    <label>Presion arterial(mmHg)</label>
+                    <input
+                      type="number"
+                      class="form-control form-control-sm"
+                      formControlName="presion_triage"
+                    >
+                  </div>
+                </div>
+                <div class="row mt-1">
+                  <div class="col-md-6">
+                    <label>Temperatura (C)</label>
+                    <input
+                      type="number"
+                      class="form-control form-control-sm"
+                      formControlName="temperatura_triage"
+                    >
+                  </div>
+                  <div class="col-md-6">
+                    <label>Frecuencia Respiratoria</label>
+                    <input
+                      type="number"
+                      class="form-control form-control-sm"
+                      formControlName="frecuenciar_triage"
+                    >
+                  </div>
+                </div>
+                <div class="row mt-1">
+                  <div class="col-md-6">
+                    <label>Frecuencia cardiaca</label>
+                    <input
+                      type="number"
+                      class="form-control form-control-sm"
+                      formControlName="frecuenciac_triage"
+                    >
+                  </div>
+                  <div class="col-md-6">
+                    <label>Saturaciòn O2</label>
+                    <input
+                      type="number"
+                      class="form-control form-control-sm"
+                      formControlName="saturacion_triage"
+                    >
+                  </div>
+                </div>
+                <div class="row mt-1">
+                  <div class="col-md-6">
+                    <label>Peso (kg)</label>
+                    <input
+                      type="number"
+                      class="form-control form-control-sm"
+                      formControlName="peso_triage"
+                    >
+                  </div>
+                  <div class="col-md-6">
+                    <label>Talla (cm)</label>
+                    <input
+                      type="number"
+                      class="form-control form-control-sm"
+                      formControlName="talla_triage"
+                    >
+                  </div>
+                </div>
+                <div class="row mt-1">
+                  <div class="col-md-6">
+                    <label>Imc</label>
+                    <input
+                      type=""
+                      class="form-control form-control-sm"
+                      formControlName="imc_triage"
+                    >
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-12">
+                    <a
+                      class="btn btn-primary text-white btn-xs mx-1 mt-3"
+                    >
+                      <i class="fas fa-database text-white"></i> Crear
+                    </a>
+                  </div>
+                </div>
+              </form>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
