--- a/src/app/contabilidad/finanzas/finanzas.component.html
+++ b/src/app/contabilidad/finanzas/finanzas.component.html
@@ -15,35 +15,39 @@
           <div class="row">
             <div class="col-md-6">
               <h6>Especialidades</h6>
-              <table class="table table-striped table-hover">
-                <thead>
-                  <tr class="bg-default">
-                    <th class="text-xs text-white"></th>
-                    <th class="text-xs text-white">NOMBRE</th>
-                    <th class="text-xs text-white">PRECIO</th>
-                    <th class="text-xs text-white">COMISION</th>
-                    <th class="text-xs text-white">ESTADO</th>
-                  </tr>
-                </thead>
-                <tbody>
-                </tbody>
-              </table>
+              <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                  <thead>
+                    <tr class="bg-default">
+                      <th class="text-xs text-white"></th>
+                      <th class="text-xs text-white">NOMBRE</th>
+                      <th class="text-xs text-white">PRECIO</th>
+                      <th class="text-xs text-white">COMISION</th>
+                      <th class="text-xs text-white">ESTADO</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                  </tbody>
+                </table>
+              </div>
             </div>
             <div class="col-md-6">
               <h6>Laboratorio</h6>
-              <table class="table table-striped table-hover">
-                <thead>
-                  <tr class="bg-default">
-                    <th class="text-xs text-white"></th>
-                    <th class="text-xs text-white">NOMBRE</th>
-                    <th class="text-xs text-white">PRECIO</th>
-                    <th class="text-xs text-white">COMISION</th>
-                    <th class="text-xs text-white">ESTADO</th>
-                  </tr>
-                </thead>
-                <tbody>
-                </tbody>
-               </table>
+              <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                  <thead>
+                    <tr class="bg-default">
+                      <th class="text-xs text-white"></th>
+                      <th class="text-xs text-white">NOMBRE</th>
+                      <th class="text-xs text-white">PRECIO</th>
+                      <th class="text-xs text-white">COMISION</th>
+                      <th class="text-xs text-white">ESTADO</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                  </tbody>
+                 </table>
+              </div>
             </div>
           </div>
         </div>
