--- a/src/app/inventarios/inventario/inventario.component.html
+++ b/src/app/inventarios/inventario/inventario.component.html
@@ -17,21 +17,23 @@
         <div class="container-fluid mt-3">
           <div class="row">
             <div class="col-md-7">
-              <table class="table table-striped table-hover">
-                <thead>
-                  <tr class="bg-default">
-                    <th class="text-xs text-white">COD</th>
-                    <th class="text-xs text-white">PRODUCTO</th>
-                    <th class="text-xs text-white">CATEGORIA</th>
-                    <th class="text-xs text-white">COSTO</th>
-                    <th class="text-xs text-white">FECHA INGRESO</th>
-                    <th class="text-xs text-white">STOCK</th>
-                   </tr>
-                </thead>
-                <tbody>
-
-                </tbody>
-              </table>
+              <div class="table-responsive">
+                <table class="table table-striped table-hover">
+                  <thead>
+                    <tr class="bg-default">
+                      <th class="text-xs text-white">COD</th>
+                      <th class="text-xs text-white">PRODUCTO</th>
+                      <th class="text-xs text-white">CATEGORIA</th>
+                      <th class="text-xs text-white">COSTO</th>
+                      <th class="text-xs text-white">FECHA INGRESO</th>
+                      <th class="text-xs text-white">STOCK</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+  
+                  </tbody>
+                </table>
+              </div>
             </div>
             <div class="col-md-5">
               <div class="row">
