--- a/src/app/procedimientos/colposcopia/colposcopia.component.html
+++ b/src/app/procedimientos/colposcopia/colposcopia.component.html
@@ -53,10 +53,22 @@
     </div>
   </nav>
   <div class="container-fluid py-1">
+    
     <div class="row ">
       <div class="card">
-        <div class="container-fluid">
-        <table class="table table-striped table-hover mt-3">
+        <div class="container-fluid mt-3">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="d-flex flex-row-reverse">
+                <a
+                  class="btn btn-primary text-white btn-xs mx-1"
+                >
+                  <i class="fas fa-database text-white"></i> Crear
+                </a>
+              </div>
+            </div>
+          </div>
+        <table class="table table-striped table-hover ">
           <thead>
             <tr class="bg-default">
               <th class="text-xs text-white">OPCIONES</th>
@@ -67,7 +79,6 @@
               <th class="text-xs text-white">IMAGENES</th>
             </tr>
           </thead>
-
           <tbody>
 
           </tbody>
@@ -80,7 +91,7 @@
         <div class="row mt-1">
           <div class="col-md-2">
             <label>DNI</label>
-            <input type="text" class="form-control form-control-sm">
+            <input type="number" class="form-control form-control-sm">
           </div>
           <div class="col-md-4">
             <label>Nombre</label>
