--- a/src/app/inventarios/productos/productos.component.html
+++ b/src/app/inventarios/productos/productos.component.html
@@ -89,16 +89,13 @@
               <div class="row mt-1">
                 <div class="col-md-6">
                   <label>Unidad Medida</label>
-                  <select
+                  <selectx
                     class="form-select"
                     aria-label="Default select example"
                     formControlName="medida_productos"
                   >
-                    <option selected>Caja</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                  </select>
+                    <option selected *ngFor="let productos of producto" [value]="productos.codigo">  {{productos.nombre}} </option>
+                  </selectx>
                 </div>
                 <div class="col-md-6">
                   <label>Cantidad</label>
